<resources>
    <string name="app_name">TastingGenie</string>

    <string name="hello_world">Hello world!</string>
    <string name="button">Button</string>
    <string name="button_register_db">登録</string>
    <string name="text_db_test">DBテスト</string>
    <string name="button_view_db">表示</string>
    <string name="label_result_data">DB結果</string>
    <string name="label_result_name">name</string>
    <string name="label_result_first_name">名</string>
    <string name="label_result_last_name">姓</string>

    <string name="select_image">画像を追加</string>
    <string name="sake_name">酒名</string>
    <string name="sake_grade">酒類</string>
    <string name="need_selecting"><![CDATA[<タップして選択>]]></string>
    <string name="sake_type">分類</string>
    <string name="sake_maker">酒造</string>
    <string name="sake_prefecture">都道府県</string>
    <string name="sake_polishing_rate">精米歩合</string>
    <string name="sake_rice">米</string>
    <string name="rice">五百万石</string>
    <string name="sake_yeast">酵母</string>
    <string name="button_add">追加</string>
    <string name="moto">酛</string>
    <string name="sake_degree">日本酒度</string>
    <string name="sake_alcohol">アルコール度数</string>
    <string name="sake_information_name_init">例）八海山</string>
    <string name="taste_strongly_spicy">大辛口</string>
    <string name="taste_spicy">辛口</string>
    <string name="taste_softly_spicy">やや辛口</string>
    <string name="taste_normal">普通</string>
    <string name="taste_softly_sweet">やや甘口</string>
    <string name="taste_sweet">甘口</string>
    <string name="taste_strongly_sweet">大甘口</string>
    <string name="date">日付</string>
    <string name="bar">お店</string>
    <string name="price">金額</string>
    <string name="temperature">温度</string>
    <string name="label_looking">見た目</string>
    <string name="color">色</string>
    <string name="viscosity">粘性</string>
    <string name="rating_three">3</string>
    <string name="label_scent">香り</string>
    <string name="label_scent_top">上立ち香</string>
    <string name="label_scent_mouth">基調香</string>
    <string name="label_scent_nose">引込香</string>
    <string name="label_taste">味</string>
    <string name="sweet_spicy">甘辛</string>
    <string name="label_sweet_spicy">甘辛</string>
    <string name="label_sour">酸味</string>
    <string name="label_bitter">苦味</string>
    <string name="label_umami">旨味</string>
    <string name="label_sharp">キレ（後味）</string>
    <string name="label_other">その他</string>
    <string name="label_scene">場面</string>
    <string name="label_dish">料理</string>
    <string name="label_comment">感想</string>
    <string name="label_review">評価（好み）</string>
    <string name="label_basic_information">基本情報</string>
    <string name="sake_water">水</string>
    <string name="sake_kake_mai">掛米</string>
    <string name="sake_koji_mai">麹米</string>
    <string name="sake_type_other">分類（その他）</string>
    <string name="sake_acidity">酸度</string>
    <string name="amino">アミノ酸</string>
    <string name="sake_amino">アミノ酸度</string>
    <string name="yen">円</string>
    <string name="ml">ml</string>
    <string name="label_scent_intensity">強さ</string>
    <string name="OK">OK</string>
    <string name="same_rice">米をまとめる</string>
    <string name="sake_kome">酒米</string>
    <string name="sake_city">市</string>


</resources>
